# fieldbioinformatics

./: .dockerignore  .gitignore  CHANGELOG  Dockerfile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  test-runner.sh
.github/workflows/: docker-build-push.yml  stale-issues.yml  unittests.yml
artic/: align_trim.py  align_trim_fasta.py  align_trim_gx1  align_trim_gx1.py  artic_mqc.py  basecaller.py  checkdir.py  collatestats.py  collect_quals.py  collect_times.py  combineruns.py  convertscheme.py  copyunprocessedfiles.py  countreads.py  cov.py  coverages.py  demultiplex.py  export.py  extract.py  fasta.py  fasta_header.py  fetch_scheme.py  filter.py  filter_reads.py  gather.py  generate_csv_ig.py  generate_report.py  generate_tree_figure.py  get-alignment.py  get_models.py  get_scheme.py  guppyplex.py  import_times.py  intersection_vcf.py  intersection_vcf_interrogate.py  intersection_vcf_stats.py  lengths.py  make_depth_mask.py  make_stats_file.py  makecommands.py  (+31 more)
artic/deprecated/: margin_cons_medaka.py  setup.py
docs/: clair3-models.md  commands.md  faq.md  index.md  installation.md  minion.md  primer-schemes.md  quick-start.md  release-notes.md  tests.md  troubleshooting.md
test-data/primer-schemes/IturiEBOV/V1/: IturiEBOV.scheme.bed
test-data/primer-schemes/nCoV-2019/V1/: nCoV-2019.scheme.bed
tests/: align_trim_unit_test.py  conftest.py  get_models_unit_test.py  get_scheme_unit_test.py  guppyplex_unit_test.py  make_depth_mask_unit_test.py  mask_unit_test.py  minion_validator.py  pipeline_unit_test.py  utils_unit_test.py  vcf_filter_unit_test.py  vcftagprimersites_unit_test.py
