[metadata]
name = artic
version = 1.5.6
author = Nick Loman
author_email = n.j.loman@bham.ac.uk
maintainer = Sam Wilkinson
maintainer_email = s.a.j.wilkinson@bham.ac.uk
description = ``artic`` is a pipeline for working with viral amplicon sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
license_files =  LICENSE
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ==3.9.* 

[options.entry_points]
console_scripts = 
    artic=artic.pipeline:main
    align_trim=artic.align_trim:main
    margin_cons=artic.margin_cons:main
    vcfextract=artic.vcfextract:main
    artic_vcf_merge=artic.vcf_merge:main
    artic_vcf_filter=artic.vcf_filter:main
    artic_make_depth_mask=artic.make_depth_mask:main
    artic_fasta_header=artic.fasta_header:main
    artic_mask=artic.mask:main
    artic_get_models=artic.get_models:main
